<?xml version="1.0"?>
<package format="3">
  <name>dm_imu</name>
  <version>0.1.0</version>
  <description>DM IMU driver (ROS 2 Humble, Python + pyserial)</description>

  <maintainer email="c1470759@outlook.com">Kielas</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <!-- 你可以选：apt 或 pip。若用 apt，就保留这行；若打算 pip 安装 pyserial，就把这行删掉改到 setup.py -->
  <exec_depend>python3-serial</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
